tests/fixtures/invalid/const_pointer_write.c
int main() {
    int value = 1;
    const int *p = &value;
    *p = 2;
    return value;
}
